[gd_scene load_steps=3 format=3 uid="uid://bsvmdu0m5l83l"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/variable_select_dialog/VariableSelectDialog.gd" id="1_6k4s4"]
[ext_resource type="PackedScene" uid="uid://drhcsh36hritm" path="res://addons/hyh.cutscene_graph/editor/variable_select_dialog/VariableSelectDialogContents.tscn" id="1_rm0su"]

[node name="VariableSelectDialog" type="Window"]
title = "Select Variable"
size = Vector2i(1200, 600)
script = ExtResource("1_6k4s4")

[node name="VariableSelectDialogContents" parent="." instance=ExtResource("1_rm0su")]

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="cancelled" from="VariableSelectDialogContents" to="." method="_on_variable_select_dialog_contents_cancelled"]
[connection signal="selected" from="VariableSelectDialogContents" to="." method="_on_variable_select_dialog_contents_selected"]
